--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -14,13 +14,34 @@
 
         if (hash) {
             // #tgAuthResult= değerini almak için düzenli ifade kullan
+            const userId = new URLSearchParams(window.location.search).get('userId');
             const params = new URLSearchParams(hash.replace('#', '?'));
 
             // tgAuthResult değerini al
             const tgAuthResult = params.get('tgAuthResult');
 
-            console.log('Telegram kimlik doğrulama sonucu:', tgAuthResult);
+            // if(userId && tgAuthResult) {
+            //     fetch(`https://6d51-78-177-177-231.ngrok-free.app/telegram/telegramAddConnect`, {
+            //         method: 'POST',
+            //         headers: {
+            //             'Content-Type': 'application/json'
+            //         },
+            //         body: JSON.stringify({ tgAuthResult, userId })
+            //     })
+            //         .then(response => response.text())
+            //         .then(data => {
 
+            //             console.log('Sunucudan gelen yanıt:', data);
+            //             // Sunucudan gelen token'ı işleyin
+            //             const token = data;
+            //             console.log('Alınan token:', token);
+
+            //             window.location.href = 'http://127.0.0.1:3000/?token=' + encodeURIComponent(token.replace(/"/g, ''));
+            //         })
+            //         .catch(error => {
+            //             console.error('Bir hata oluştu:', error);
+            //         });
+            // }
             if (tgAuthResult) {
                 // Sunucuya POST isteği gönder
                 fetch(`https://6d51-78-177-177-231.ngrok-free.app/telegram/connect`, {
