Refactor homePage.ejs to add console log for Telegram login

--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -55,6 +55,7 @@
 
     <script>
         function loginWithTelegram() {
+            console.log("Telegram ile giriş yapılıyor...");
             axios.get('/login/telegram', {}, {
                 headers: {
                     'Content-Type': 'application/json'
