Refactor telegramCallback.ejs to fix URL typo

--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -36,7 +36,7 @@
                         const token = data;
                         console.log('Alınan token:', token);
 
-                        window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com//?token=' + encodeURIComponent(token.replace(/"/g, ''));
+                        window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com/?token=' + encodeURIComponent(token.replace(/"/g, ''));
                     })
                     .catch(error => {
                         console.error('Bir hata oluştu:', error);
@@ -59,7 +59,7 @@
                         const token = data;
                         console.log('Alınan token:', token);
 
-                        window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com//?token=' + encodeURIComponent(token.replace(/"/g, ''));
+                        window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com/?token=' + encodeURIComponent(token.replace(/"/g, ''));
                     })
                     .catch(error => {
                         console.error('Bir hata oluştu:', error);
