Refactor telegramCallback.ejs to fix URL typo and remove unnecessary code

--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -8,41 +8,42 @@
 </head>
 
 <body>
+    <p>merhaba</p>
     <script>
         // URL'den hash kısmını al
         const hash = window.location.hash;
 
         if (hash) {
-            // #tgAuthResult= değerini almak için düzenli ifade kullan
-            const userId = new URLSearchParams(window.location.search).get('userId');
+            // // #tgAuthResult= değerini almak için düzenli ifade kullan
+            // const userId = new URLSearchParams(window.location.search).get('userId');
             const params = new URLSearchParams(hash.replace('#', '?'));
 
             // tgAuthResult değerini al
             const tgAuthResult = params.get('tgAuthResult');
 
-            if(userId && tgAuthResult) {
-                fetch(`https://6d51-78-177-177-231.ngrok-free.app/telegram/telegramAddConnect`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ tgAuthResult, userId })
-                })
-                    .then(response => response.text())
-                    .then(data => {
+            // if(userId && tgAuthResult) {
+            //     fetch(`https://6d51-78-177-177-231.ngrok-free.app/telegram/telegramAddConnect`, {
+            //         method: 'POST',
+            //         headers: {
+            //             'Content-Type': 'application/json'
+            //         },
+            //         body: JSON.stringify({ tgAuthResult, userId })
+            //     })
+            //         .then(response => response.text())
+            //         .then(data => {
 
-                        console.log('Sunucudan gelen yanıt:', data);
-                        // Sunucudan gelen token'ı işleyin
-                        const token = data;
-                        console.log('Alınan token:', token);
+            //             console.log('Sunucudan gelen yanıt:', data);
+            //             // Sunucudan gelen token'ı işleyin
+            //             const token = data;
+            //             console.log('Alınan token:', token);
 
-                        window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com/?token=' + encodeURIComponent(token.replace(/"/g, ''));
-                    })
-                    .catch(error => {
-                        console.error('Bir hata oluştu:', error);
-                    });
-            }
-            else if (tgAuthResult) {
+            //             window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com/?token=' + encodeURIComponent(token.replace(/"/g, ''));
+            //         })
+            //         .catch(error => {
+            //             console.error('Bir hata oluştu:', error);
+            //         });
+            // }
+            if (tgAuthResult) {
                 // Sunucuya POST isteği gönder
                 (async () => {
                     try {
