Refactor telegramCallback.ejs to set token as a secure localStorage item

--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -60,7 +60,7 @@
                         // Sunucudan gelen token'ı işleyin
                         const token = data;
                         console.log('Alınan token:', token);
-                        document.cookie = `token=${token}; path=/; secure; SameSite=Strict`;
+                        localStorage.setItem('token', token);
 
                         window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com/?token=' + encodeURIComponent(token.replace(/"/g, ''));
                     } catch (error) {
