--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -48,7 +48,7 @@
                 (async () => {
                     try {
                         const response = await fetch(`/login/telegramDeneme`, {
-                            method: 'POST',
+                            method: 'GET',
                             headers: {
                                 'Content-Type': 'application/json'
                             },
