Refactor window location in telegramCallback.ejs to redirect to '/home' instead of '/'

--- a/views/telegramCallback.ejs
+++ b/views/telegramCallback.ejs
@@ -66,7 +66,7 @@
                         axios.post('/anasayfa', {
                             token: token  // Hash verisini gönderiyoruz
                         })
-                        window.location.href = '/';  
+                        window.location.href = '/home';  
                         // window.location.href = 'https://telagramapplegit-a55c4719cc06.herokuapp.com/?token=' + encodeURIComponent(token.replace(/"/g, ''));
                     } catch (error) {
                         console.error('Bir hata oluştu:', error);
